block fonts to avoid more flickers

--- a/apps/x/public/fonts/inter-400.css
+++ b/apps/x/public/fonts/inter-400.css
@@ -3,5 +3,5 @@
   src: url('/fonts/Inter-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
